Fix resource linking error with remove_circle by duplicating and add edit icon to appbar in landscape mode

--- a/app/src/main/res/menu/appbar_menu.xml
+++ b/app/src/main/res/menu/appbar_menu.xml
@@ -10,7 +10,12 @@
 
     <item android:id="@+id/action_delete"
         android:title="@string/action_delete"
-        android:icon="@drawable/remove_circle"
+        android:icon="@drawable/remove_circle_2"
+        app:showAsAction="ifRoom"/>
+
+    <item android:id="@+id/action_edit"
+        android:title="@string/action_edit"
+        android:icon="@drawable/edit_pencil"
         app:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_about"
